--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
+@import 'style/variables.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -24,4 +26,31 @@ main {
 a {
   display: inline-block;
   text-decoration: none;
+}
+
+.noData {
+  background-color: $deepGray;
+  text-align: center;
+  width: 300px;
+  margin: 20px auto;
+  border-radius: 12px;
+  padding: 10px;
+  p {
+    color: #ffffff;
+  }
+}
+
+.hide {
+  display: none;
+}
+
+.errorMsg {
+  color: $red;
+  font-size: 16px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
