--- a/src/component/Show/Favorite.module.scss
+++ b/src/component/Show/Favorite.module.scss
@@ -4,7 +4,7 @@
   color: $red;
   border-color: transparent;
   background: rgba(0, 0, 0, 0.7);
-  &:hover {
+  @include hover {
     background: $yellow;
   }
 }
