--- a/src/component/Layout/Header.module.scss
+++ b/src/component/Layout/Header.module.scss
@@ -1,28 +1,19 @@
 @import 'style/variables.scss';
 
-.header {
-  width: 100%;
-  height: 5rem;
-  padding: 0 10%;
+header {
+  margin: auto;
+  padding: 1% 5%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: $deepGray;
-  h1 {
-    font-size: 36px;
-    a {
-      color: #ffffff;
-      &:hover, &.active {
-        color: $yellow;
-      }
+  background: $deepGray;
+  img {
+    display: block;
+    @include rwdmax($pad) {
+      width: 100px;
     }
-  }
-}
-.button {
-  color: $red;
-  border-color: $red;
-  &:hover, &.active {
-    background-color: $yellow;
-    border-color: $yellow;
+    @include rwdmin($pad + 1) {
+      width: 120px;
+    }
   }
 }
