--- a/src/component/Profile/Profile.module.scss
+++ b/src/component/Profile/Profile.module.scss
@@ -3,30 +3,29 @@
 .profile {
   width: 90%;
   margin: auto;
-  animation: appear 1s ease-out forwards;
-  h2 {
-    color: #ffffff;
-    margin: 0;
-    line-height: 1.6;
+  @include slideInAnimation(1s);
+  h2, h4 {
+    color: $white;
   }
 }
 .userSection {
   text-align: center;
-  p {
-    font-size: 24px;
-    color: #fff;
-    margin: 10px 0;
+  .avatar {
+    width: 80px;
   }
   .button {
     border-color: transparent;
     background: rgba(0, 0, 0, 0.7);
-    font-size: 14px;
-    color: #ffffff;
+    color: $white;
     margin: 0 2px;
+    @include hover {
+      background: $yellow;
+      color: $red;
+    }
   }
   .data {
     margin: 10px;
-    color: #aaaaaa;
+    color: $lightGray;
     display: inline-block;
   }
   .number {
@@ -40,24 +39,5 @@
   ul {
     display: flex;
     flex-wrap: wrap;
-  }
-  .button {
-    color: $yellow;
-    border-color: $yellow;
-    &:hover {
-      color: $red;
-      background-color: $yellow;
-    }
-  }
-}
-@keyframes appear {
-  from {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
