--- a/src/component/UI/Filter.module.scss
+++ b/src/component/UI/Filter.module.scss
@@ -1,22 +1,34 @@
 @import 'style/variables.scss';
 
 .filter {
-  // fix me 這個margin 移到show list
-  margin: 0 1%;
-  p {
-    margin: 10px 0;
-  }
+  margin-bottom: 10px;
 }
 .title {
-  color: #ffffff;
-  font-size: 16px;
+  color: $white;
   margin-right: 16px;
 }
+.row {
+  display: flex;
+  align-items: center;
+  span {
+    min-width: fit-content;
+  }
+}
+.buttonGroup {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
 .button {
-  color: #ffffff;
-  font-size: 16px;
+  color: $white;
   margin-right: 8px;
-  &.active, &:hover {
+  min-width: fit-content;
+  &.active {
+    color: $red;
+    background: $yellow;
+    border-color: $yellow;
+  }
+  @include hover {
     color: $red;
     background: $yellow;
     border-color: $yellow;
@@ -24,28 +36,40 @@
 }
 .search {
   display: flex;
+  @include rwdmax($mobile) {
+    margin-block-start: 6px;
+    margin-block-end: 6px;
+  }
+  @include rwd($mobile + 1, $laptop - 1) {
+    margin-block-start: 8px;
+    margin-block-end: 8px;
+  }
+  @include rwdmin($laptop) {
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+  }
   .title {
     align-self: center;
   }
   input {
     background: $deepGray;
-    border: none;
-    font-size: 16px;
     padding-left: 10px;
-    color: #fff;
+    color: $white;
     border-radius: 12px 0 0 12px;
     width: 200px;
+    border: 2px solid transparent;
     &:focus {
       outline: none;
+      border-color: $yellow;
     }
   }
   button {
-    color: $red;
     border-radius: 0 12px 12px 0;
-    border-color: $red;
-    background: $deepGray;
-    &:hover {
-      background: $yellow;
+    border-color: $yellow;
+    background: $yellow;
+    color: $deepGray;
+    @include hover {
+      color: $red;
     }
   }
 }
