- update text color - adjust order of finally - adjust shoList/showItem/showModal structure - remove unused code "cart" - customize dependencies of firebase to optimize bundle size

--- a/src/component/PlayList/AddShowModal.module.scss
+++ b/src/component/PlayList/AddShowModal.module.scss
@@ -42,7 +42,8 @@
     background: $yellow;
     color: $deepGray;
     @include hover {
-      color: $red;
+      color: $black;
+      border-color: $white;
     }
   }
   .inActive {
@@ -50,7 +51,7 @@
     border-color: $yellow;
     @include hover {
       background: $yellow;
-      color: $red;
+      color: $deepGray;
     }
   }
 }
