--- a/src/component/UI/Button.module.scss
+++ b/src/component/UI/Button.module.scss
@@ -33,7 +33,8 @@
   background: $yellow;
   color: $deepGray;
   @include hover {
-    color: $red;
+    color: $black;
+    border-color: $white;
   }
 }
 .cancel {
